feat(backend): add get posts by handle endpoint
